m changes and aboutus page added

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Contact | ALVN Education Consultancy</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
@@ -34,7 +34,7 @@
             </div>
         </nav>
     </header>
-    <div class="h-[300px] w-full bg-[#004687]">
+    <div class="h-[300px] w-full bg-[#1E3A5F]">
         <div class="text-center">
             <h1 class=" text-white text-[55px] pt-[110px] font-bold ">Contact Us</h1>
             <p class="text-[white] text-[20px] pb-[40px] text-sm">Home / Contact
@@ -170,7 +170,7 @@
     </section>
 
 
-    <div class="h-[350px] w-full bg-[#1E2952]">
+    <div class="h-[350px] w-full bg-[#1A1A2E]">
 
         <div class="grid grid-cols-4 gap-[60px] w-[85%] mx-auto pt-[60px]">
             <div>
