--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ALVN Consultancy</title>
+    <title>ALVN Education Consultancy</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
@@ -21,7 +21,7 @@
             <div
                 class="flex flex-row gap-[40px] text-center justify-between text-[black] text-md font-semibold p-[35px] pl-[10px] pr-[40px] ">
                 <a href="" class="hover:text-[orangered] cursor-pointer duration-150">Home</a>
-                <a href="" class="hover:text-[orangered] cursor-pointer duration-150">About Us</a>
+                <a href="C:\\Users\\User\\OneDrive\\Desktop\\web\\aboutus.html" class="hover:text-[orangered] cursor-pointer duration-150">About Us</a>
                 <a href="" class="hover:text-[orangered] cursor-pointer duration-150">Study Destinations</a>
                 <a href="C:\\Users\\User\\OneDrive\\Desktop\\web\\services.html" class="hover:text-[orangered] cursor-pointer duration-150">Services</a>
                 <a href="" class="hover:text-[orangered] cursor-pointer duration-150">Blog</a>
@@ -193,7 +193,9 @@
         </p>
     </div>
 
+
     <div class="grid grid-cols-3  gap-[45px] p-[40px] pt-[70px] text-center px-[100px]" data-aos="fade-up">
+
         <div class="shadow rounded-xl pt-[3px] pb-[8px] h-[220px] w-full py-[20px] hover:border-1 hover:border-red-300 group">
             <i class="fa-solid fa-graduation-cap text-[50px] group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300 pt-10px"></i>
             <h2 class="text-[#1E3A5F] text-[25px] pt-5 ">Career Counselling</h2>
@@ -201,49 +203,49 @@
                 based on your career goals</p>
         </div>
 
-        <div class="shadow rounded-xl pt-[3px] pb-[8px] h-[220px]  w-full hover:border-1 hover:border-red-300 group">
-            <i class="fa-regular fa-file-lines text-[50px] py-[20px] hover:text-red-300 pt-10px group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300"></i>
-            <h2 class="text-[#1E3A5F] text-[22px] pt-5 ">Documentation Support</h2>
+        <div class="shadow rounded-xl pt-[3px] pb-[8px] h-[220px] py-[20px] w-full hover:border-1 hover:border-red-300 group">
+            <i class="fa-regular fa-file-lines text-[50px] hover:text-red-300 pt-10px group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300"></i>
+            <h2 class="text-[#1E3A5F] text-[25px] pt-5 ">Documentation Support</h2>
             <p class="text-[#6C757D] w-[65%] mx-auto">Complete assistance with application documents, SOP, LOR, and
                 other requirements.</p>
         </div>
 
-        <div class="shadow rounded-xl pt-[3px] pb-[8px] h-[220px] w-full hover:border-1  hover:border-red-300 group">
-            <i class="fa-solid fa-book-open text-[50px] py-[20px] hover:text-red-300 pt-10px group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300"></i>
-            <h2 class="text-[#1E3A5F] text-[22px] pt-5 ">Test Preparation</h2>
+        <div class="shadow rounded-xl pt-[3px] pb-[8px] h-[220px] py-[20px] w-full hover:border-1  hover:border-red-300 group">
+            <i class="fa-solid fa-book-open text-[50px] hover:text-red-300 pt-10px group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300"></i>
+            <h2 class="text-[#1E3A5F] text-[25px] pt-5 ">Test Preparation</h2>
             <p class="text-[#6C757D] w-[65%] mx-auto">Comprehensive coaching for IELTS, PTE, TOEFL, GRE, GMAT, and
                 language tests.</p>
         </div>
 
-        <div class="shadow rounded-xl pt-[3px] pb-[8px] h-[220px] w-full hover:border-1  hover:border-red-300 group">
-            <i class="fa-brands fa-cc-visa text-[50px] py-[20px] hover:text-red-300 pt-10px group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300"></i>
-            <h2 class="text-[#1E3A5F] text-[22px] pt-5 ">Visa Guidance</h2>
+        <div class="shadow rounded-xl pt-[3px] pb-[8px] h-[220px] py-[20px] w-full hover:border-1  hover:border-red-300 group">
+            <i class="fa-brands fa-cc-visa text-[50px] hover:text-red-300 pt-10px group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300"></i>
+            <h2 class="text-[#1E3A5F] text-[25px] pt-5 ">Visa Guidance</h2>
             <p class="text-[#6C757D] w-[65%] mx-auto">Step-by-step visa application support with high success rate.</p>
         </div>
 
         <div
-            class="shadow rounded-xl pt-[3px] pb-[8px] h-[220px] w-full hover:border-1 hover:border-red-300 items-center group">
-            <i class="fa-solid fa-building-columns text-[50px] py-[20px] hover:text-red-300 pt-10px group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300"></i>
-            <h2 class="text-[#1E3A5F] text-[22px] pt-5 ">University Admission</h2>
+            class="shadow rounded-xl pt-[3px] pb-[8px] h-[220px] py-[20px] w-full hover:border-1 hover:border-red-300 items-center group">
+            <i class="fa-solid fa-building-columns text-[50px] hover:text-red-300 pt-10px group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300"></i>
+            <h2 class="text-[#1E3A5F] text-[25px] pt-5 ">University Admission</h2>
             <p class="text-[#6C757D] w-[65%] mx-auto">Direct partnerships with top universities for seamless admission
                 process.</p>
         </div>
 
-        <div class="shadow rounded-xl pt-[3px] pb-[8px] h-[220px] w-full hover:border-1 hover:border-red-300 group ">
-            <i class="fa-solid fa-plane-departure text-[50px] py-[20px] hover:text-red-300 pt-10px group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300"></i>
-            <h2 class="text-[#1E3A5F] text-[22px] pt-5 ">Pre-departure Briefing</h2>
+        <div class="shadow rounded-xl pt-[3px] pb-[8px] h-[220px] py-[20px] w-full hover:border-1 hover:border-red-300 group ">
+            <i class="fa-solid fa-plane-departure text-[50px] hover:text-red-300 pt-10px group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300"></i>
+            <h2 class="text-[#1E3A5F] text-[25px] pt-5 ">Pre-departure Briefing</h2>
             <p class="text-[#6C757D] w-[65%] mx-auto">Essential information and tips to prepare you for life abroad.</p>
         </div>
     </div>
 
-    <div class="text-center h-[80px] pt-[20px] pb-[30px]">
+    <div class="text-center h-[80px] pt-[20px] pb-[90px]">
         <a href=""
             class="bg-[#C0392B] rounded-3xl text-white px-4 py-2 text-center text-[20px] hover:shadow-lg hover:translate-y-[2px] duration-[100] font-semibold" data-aos="fade-up">View
             All Services</a>
     </div>
 
 
-    <div class="h-[610px] w-full bg-[#007791]" data-aos="fade-up">
+    <div class="h-[610px] w-full bg-[#005A9C]" data-aos="fade-up duration-500">
         <div class="text-center">
             <h1 class=" text-white text-[45px] text-b pt-[90px] font-semibold">Why Choose ALVN?</h1>
             <p class="text-[white] text-[20px] pt-[10px] ">Your success is our priority
@@ -278,8 +280,8 @@
         </div>
     </div>
 
-    <div class="h-[350px] w-full bg-[#2E5090]" data-aos="fade-up">
-        <div class="text-center">
+    <div class="h-[350px] w-full bg-[#2E5090]">
+        <div class="text-center" data-aos="fade-up">
             <h1 class=" text-white text-[45px] text-b pt-[85px] pb-[15px] font-semibold">Ready to Start Your Journey?
             </h1>
             <p class="text-[white] text-[20px] pb-[30px] ">Take the first step towards your international education
@@ -294,7 +296,7 @@
     </div>
 
 
-    <div class="h-[350px] w-full bg-[#1E2952]">
+    <div class="h-[350px] w-full bg-[#1A1A2E]">
 
         <div class="grid grid-cols-4 gap-[60px] w-[85%] mx-auto pt-[60px]">
             <div>
