--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services</title>
+    <title>Services | ALVN Education Consultancy</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
@@ -72,8 +72,7 @@
             <p class="text-[#6C757D] w-[85%] mx-auto pt-[20px]">Our visa experts guide you through the entire visa application process. We help prepare your documentation, conduct mock interviews, and provide tips to increase your chances of visa approval. Our high success rate speaks to our expertise</p>
         </div>
 
-        <div
-            class="shadow-lg rounded-xl pt-[15px] pb-[8px] h-[380px] py-[20px] w-full hover:border-1 hover:border-red-300 items-center group">
+        <div class="shadow-lg rounded-xl pt-[15px] pb-[8px] h-[380px] py-[20px] w-full hover:border-1 hover:border-red-300 items-center group">
             <i class="fa-solid fa-building-columns text-[50px] text-white py-[20px] hover:text-[orangered] pt-[25px] group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300 bg-[#1E3A5F] h-[80px] w-[80px] flex items-center rounded-full"></i>
             <h2 class="text-[#1E3A5F] text-[25px] pt-5 font-bold">University Admission</h2>
             <p class="text-[#6C757D] w-[85%] mx-auto pt-[20px]">Before you leave for your destination country, we provide comprehensive pre-departure briefings covering essential information about accommodation, banking, local culture, weather, transportation, and tips for adjusting to life abroad</p>
@@ -121,7 +120,7 @@
     </div>
 
 
-    <div class="h-[350px] w-full bg-[#1E2952]">
+    <div class="h-[350px] w-full bg-[#1A1A2E]">
 
         <div class="grid grid-cols-4 gap-[60px] w-[85%] mx-auto pt-[60px]">
             <div>
