--- a/contact.html
+++ b/contact.html
@@ -21,11 +21,11 @@
             <div
                 class="flex flex-row gap-[40px] text-center justify-between text-[black] text-md font-semibold p-[35px] pl-[10px] pr-[40px] ">
                 <a href="/index.html" class="hover:text-[orangered] cursor-pointer duration-150">Home</a>
-                <a href="" class="hover:text-[orangered] cursor-pointer duration-150">About Us</a>
+                <a href="/aboutus.html" class="hover:text-[orangered] cursor-pointer duration-150">About Us</a>
                 <a href="" class="hover:text-[orangered] cursor-pointer duration-150">Study Destinations</a>
-                <a href="C:\\Users\\User\\OneDrive\\Desktop\\web\\services.html" class="hover:text-[orangered] cursor-pointer duration-150">Services</a>
+                <a href="/services.html" class="hover:text-[orangered] cursor-pointer duration-150">Services</a>
                 <a href="" class="hover:text-[orangered] cursor-pointer duration-150">Blog</a>
-                <a href="C:\\Users\\User\\OneDrive\\Desktop\\web\\contact.html" class="hover:text-[orangered] cursor-pointer duration-150">Contact</a>
+                <a href="/contact.html" class="hover:text-[orangered] cursor-pointer duration-150">Contact</a>
                 <div>
                     <a href=""
                         class="bg-[#C0392B] px-4 py-2 text-white rounded-3xl text-[16px]  hover:shadow-lg hover:translate-y-[2px] duration-[100] font-semibold">Apply
@@ -106,13 +106,13 @@
             <div class="p-[10px] h-[620px] bg-[#1E3A5F] shadow-lg rounded-xl overflow-hidden overflow-hidden">
                 <h2 class="text-[30px] py-[30px] text-white font-semibold pb-[25px] px-4">Get In Touch</h2>
 
-                <div class="flex flex-col gap-5 px-8">
+                <div class="flex flex-col gap-5 px-6">
 
                     <div class="flex gap-4">
                         <span class="text-orange-400 text-[25px]"><i class="fa-solid fa-location-dot text-[orangered]"></i></span>
                         <div class="text-white">
                             <h3 class="text-lg font-semibold">Our Location</h3>
-                            <p class="text-sm">Kalanki-14, Kathmandu, Nepal</p>
+                            <p class="text-md">Kalanki-14, Kathmandu, Nepal</p>
                         </div>
                     </div>
                     
@@ -120,7 +120,7 @@
                         <span class="text-orange-400 text-[25px]"><i class="fa-solid fa-phone text-[orangered]"></i></span>
                         <div class="text-white">
                             <h3 class="text-lg font-semibold">Phone Number</h3>
-                            <a href="" class="text-sm">+977-9851083578</a>
+                            <a href="" class="text-md hover:text-[orangered] cursor-pointer duration-550">+977-9851083578</a>
                         </div>
                     </div>
 
@@ -128,7 +128,7 @@
                         <span class="text-orange-400 text-[25px]"><i class="fa-brands fa-whatsapp text-[orangered]"></i></span>
                         <div class="text-white">
                             <h3 class="text-lg font-semibold">Whatsapp</h3>
-                            <a href="" class="text-sm">+977-9851083578</a>
+                            <a href="" class="text-md hover:text-[orangered] cursor-pointer duration-550">+977-9851083578</a>
                         </div>
                     </div>
 
@@ -136,7 +136,7 @@
                         <span class="text-orange-400 text-[25px]"><i class="fa-solid fa-envelope text-[orangered]"></i></span>
                         <div class="text-white">
                             <h3 class="text-lg font-semibold">Email Address</h3>
-                            <a href="" class="text-sm">info@alvn.edu.np</a>
+                            <a href="" class="text-md hover:text-[orangered] cursor-pointer duration-550">info@alvn.edu.np</a>
                         </div>
                     </div>
 
@@ -144,7 +144,7 @@
                         <span class="text-orange-400 text-[25px]"><i class="fa-solid fa-globe text-[orangered]"></i></span>
                         <div class="text-white">
                             <h3 class="text-lg font-semibold">Website</h3>
-                            <a href="" class="text-sm">www.alvn.edu.np</a>
+                            <a href="" class="text-md hover:text-[orangered] cursor-pointer duration-550">www.alvn.edu.np</a>
                         </div>
                     </div>
 
@@ -152,7 +152,7 @@
                         <span class="text-orange-400 text-[25px]"><i class="fa-regular fa-clock text-[orangered]"></i></span>
                         <div class="text-white">
                             <h3 class="text-lg font-semibold">Office Hours</h3>
-                            <p class="text-sm">Sun - Fri: 10:00 AM - 5:00 PM</p>
+                            <p class="text-md">Sun - Fri: 10:00 AM - 5:00 PM</p>
                         </div>
                     </div>
                     <div class="h-[60px] py-[20px]">
