--- a/services.html
+++ b/services.html
@@ -10,6 +10,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"/>
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
+
+
 <body>
     <header class="shadow-lg sticky z-50 top-0 bg-white">
         <nav class="flex flex-row gap-[40px] text-center justify-between w-[90%] mx-auto">
@@ -18,11 +20,11 @@
             <div
                 class="flex flex-row gap-[40px] text-center justify-between text-[black] text-md font-semibold p-[35px] pl-[10px] pr-[40px] ">
                 <a href="/index.html" class="hover:text-[orangered] cursor-pointer duration-150">Home</a>
-                <a href="" class="hover:text-[orangered] cursor-pointer duration-150">About Us</a>
+                <a href="/aboutus.html" class="hover:text-[orangered] cursor-pointer duration-150">About Us</a>
                 <a href="" class="hover:text-[orangered] cursor-pointer duration-150">Study Destinations</a>
-                <a href="C:\\Users\\User\\OneDrive\\Desktop\\web\\services.html" class="hover:text-[orangered] cursor-pointer duration-150">Services</a>
+                <a href="/services.html" class="hover:text-[orangered] cursor-pointer duration-150">Services</a>
                 <a href="" class="hover:text-[orangered] cursor-pointer duration-150">Blog</a>
-                <a href="C:\\Users\\User\\OneDrive\\Desktop\\web\\contact.html" class="hover:text-[orangered] cursor-pointer duration-150">Contact</a>
+                <a href="/contact.html" class="hover:text-[orangered] cursor-pointer duration-150">Contact</a>
                 <div>
                     <a href=""
                         class="bg-[#C0392B] px-4 py-2 text-white rounded-3xl text-[16px]  hover:shadow-lg hover:translate-y-[2px] duration-[100] font-semibold">Apply
