--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
                     class="text-[30px] text-red-700 font-bold">N</span></div>
             <div
                 class="flex flex-row gap-[40px] text-center justify-between text-[black] text-md font-semibold p-[35px] pl-[10px] pr-[40px] ">
-                <a href="" class="hover:text-[orangered] cursor-pointer duration-150">Home</a>
-                <a href="C:\\Users\\User\\OneDrive\\Desktop\\web\\aboutus.html" class="hover:text-[orangered] cursor-pointer duration-150">About Us</a>
+                <a href="/index.html" class="hover:text-[orangered] cursor-pointer duration-150">Home</a>
+                <a href="/aboutus.html" class="hover:text-[orangered] cursor-pointer duration-150">About Us</a>
                 <a href="" class="hover:text-[orangered] cursor-pointer duration-150">Study Destinations</a>
-                <a href="C:\\Users\\User\\OneDrive\\Desktop\\web\\services.html" class="hover:text-[orangered] cursor-pointer duration-150">Services</a>
+                <a href="/services.html" class="hover:text-[orangered] cursor-pointer duration-150">Services</a>
                 <a href="" class="hover:text-[orangered] cursor-pointer duration-150">Blog</a>
-                <a href="C:\\Users\\User\\OneDrive\\Desktop\\web\\contact.html" class="hover:text-[orangered] cursor-pointer duration-150">Contact</a>
+                <a href="/contact.html" class="hover:text-[orangered] cursor-pointer duration-150">Contact</a>
                 <div>
                     <a href=""
                         class="bg-[#C0392B] px-4 py-2 text-white rounded-3xl text-[16px] hover:shadow-lg hover:translate-y-[2px] duration-[100] font-semibold">Apply
