--- a/services.html
+++ b/services.html
@@ -18,7 +18,7 @@
             <div class="p-[25px] pl-[60px] text-[30px] text-[navy] font-bold"><a href="">ALV</a><span
                     class="text-[30px] text-red-700 font-bold">N</span></div>
             <div
-                class="flex flex-row gap-[40px] text-center justify-between text-[black] text-md font-semibold p-[35px] pl-[10px] pr-[40px] ">
+                class="hidden lg:flex flex-row gap-[40px] lg:gap-[20px] text-center justify-between text-[black] text-md font-semibold p-[35px] pl-[10px] pr-[40px] ">
                 <a href="/index.html" class="hover:text-[orangered] cursor-pointer duration-150">Home</a>
                 <a href="/aboutus.html" class="hover:text-[orangered] cursor-pointer duration-150">About Us</a>
                 <a href="" class="hover:text-[orangered] cursor-pointer duration-150">Study Destinations</a>
@@ -31,8 +31,51 @@
                         Now</a>
                 </div>
             </div>
+             <div class="lg:hidden">
+                <i class="fa-solid fa-bars text-2xl" data-drawer-target="nav-drawer" data-drawer-show="nav-drawer"
+                    aria-controls="nav-drawer"></i>
+            </div>
         </nav>
     </header>
+
+    <!-- drawer component -->
+    <div id="nav-drawer"
+        class="fixed top-0 left-0 z-50 h-screen p-4 overflow-y-auto transition-transform -translate-x-full bg-white w-96 border-e border-default"
+        tabindex="-1" aria-labelledby="drawer-label">
+        <div class="border-b border-default pb-4 mb-5 flex items-center">
+            <h5 id="drawer-label" class="inline-flex items-center text-lg font-medium text-body">
+                <svg class="w-5 h-5 me-1.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                    fill="none" viewBox="0 0 24 24">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M10 11h2v5m-2 0h4m-2.592-8.5h.01M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                </svg>
+                Menu
+            </h5>
+            <button type="button" data-drawer-hide="nav-drawer" aria-controls="nav-drawer"
+                class="text-body bg-transparent hover:text-heading hover:bg-neutral-tertiary rounded-base w-9 h-9 absolute top-2.5 end-2.5 flex items-center justify-center">
+                <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                    fill="none" viewBox="0 0 24 24">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M6 18 17.94 6M18 18 6.06 6" />
+                </svg>
+                <span class="sr-only">Close menu</span>
+            </button>
+        </div>
+        <div class="flex flex-col gap-[30px] justify-between text-[black] text-md font-semibold p-[35px] pl-[10px] pr-[40px] ">
+            <a href="/index.html" class="hover:text-[orangered] cursor-pointer duration-150">Home</a>
+            <a href="/aboutus.html" class="hover:text-[orangered] cursor-pointer duration-150">About Us</a>
+            <a href="" class="hover:text-[orangered] cursor-pointer duration-150">Study Destinations</a>
+            <a href="/services.html" class="hover:text-[orangered] cursor-pointer duration-150">Services</a>
+            <a href="" class="hover:text-[orangered] cursor-pointer duration-150">Blog</a>
+            <a href="/contact.html" class="hover:text-[orangered] cursor-pointer duration-150">Contact</a>
+            <div class="pt-[130px]">
+                <a href=""
+                    class="bg-[#C0392B] px-4 py-2 text-white rounded-3xl text-[16px] hover:shadow-lg hover:translate-y-[2px] duration-[100] font-semibold">Apply
+                    Now</a>
+            </div>
+        </div>
+    </div>
+
 
      <div class="h-[280px] w-full bg-[#1E3A5F]">
         <div class="text-center">
