--- a/UK.html
+++ b/UK.html
@@ -76,15 +76,15 @@
     <div class="shadow-lg rounded-xl overflow-hidden w-[56%] ">
         <div class="p-[20px] text-start">
             <span><i class="fa-solid fa-info text-[30px] font-bold text-[orangered]"></i><h2 class="text-[30px] text-[#1E3A5F] font-bold">Admission Requirements</h2></span>
-            <div class="text-[gray] text-md flex flex-col gap-[9px] ">
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Academic qualifications (A-Levels equivalent)</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>English proficiency: IELTS 6.0-7.5 (varies by course)</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Personal Statement</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Letters of Reference</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Portfolio (for creative courses)</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Valid passport</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Financial documents</div></span>
-                </div>
+            <ul class="text-[gray] text-md flex flex-col gap-[9px] ">
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Academic qualifications (A-Levels equivalent)</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>English proficiency: IELTS 6.0-7.5 (varies by course)</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Personal Statement</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Letters of Reference</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Portfolio (for creative courses)</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Valid passport</div></li>
+                        <i class="fa-solid fa-circle text-[7px]"></i><div>Financial documents/span></div></li>
+                </ul>
         </div>
     </div>
     </div>
@@ -92,12 +92,12 @@
     <div class="pt-[30px] pl-[120px]">
     <div class="shadow-lg rounded-xl overflow-hidden w-[56%] ">
         <div class="p-[20px] text-start">
-            <span><i class="fa-solid fa-info text-[30px] font-bold text-[orangered]"></i><h2 class="text-[30px] text-[#1E3A5F] font-bold">Estimated Tuition Fees</h2></span>
+            ><i class="fa-solid fa-info text-[30px] font-bold text-[orangered]"></i><h2 class="text-[30px] text-[#1E3A5F] font-bold">Estimated Tuition Fees</h2><>
             <div class="text-[gray] text-md flex flex-col gap-[9px] ">
-                    <span class="flex flex-col"><i class="fa-solid fa-circle text-[7px]"></i><div class="font-semibold">Undergraduate:</div> <div>£10,000 - £38,000 per year</div></span>
-                    <span class="flex flex-col"><i class="fa-solid fa-circle text-[7px]"></i><div class="font-semibold">Postgraduate:</div> <div>£11,000 - £32,000 per year</div></span>
-                    <span class="flex flex-col"><i class="fa-solid fa-circle text-[7px]"></i><div class="font-semibold">Vocational Education:</div> <div>£12,000 - £60,000</div></span>
-                    <span class="flex flex-col"><i class="fa-solid fa-circle text-[7px]"></i><div class="font-semibold">Living Expenses:</div> <div>£9,207 - £12,006 per year (outside/inside London)</div></span>
+                    <li class="flex items-center gap-2 ml-3" ><i class="fa-solid fa-circle text-[7px]"></i><div class="font-semibold">Undergraduate:</div> <div>£10,000 - £38,000 per year</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div class="font-semibold">Postgraduate:</div> <div>£11,000 - £32,000 per year</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div class="font-semibold">Vocational Education:</div> <div>£12,000 - £60,000</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div class="font-semibold">Living Expenses:</div> <div>£9,207 - £12,006 per year (outside/inside London)</div></li>
                 </div>
         </div>
     </div>
@@ -108,11 +108,11 @@
         <div class="p-[20px] text-start">
             <span><i class="fa-solid fa-info text-[30px] font-bold text-[orangered]"></i><h2 class="text-[30px] text-[#1E3A5F] font-bold">Scholarship Opportunities</h2></span>
              <div class="text-[gray] text-md flex flex-col gap-[9px] ">
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Chevening Scholarships (fully funded)</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Commonwealth Scholarships</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>GREAT Scholarships</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>University-specific scholarships</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Charles Wallace Trust Scholarships</div></span>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Chevening Scholarships (fully funded)</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Commonwealth Scholarships</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>GREAT Scholarships</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>University-specific scholarships</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Charles Wallace Trust Scholarships</div></li>
                 </div>
         </div>
     </div>
