added bg to icons

--- a/australia.html
+++ b/australia.html
@@ -42,7 +42,7 @@
     <div class="pt-[60px] pl-[120px]">
     <div class="shadow-lg rounded-xl overflow-hidden w-[56%] ">
         <div class="p-[20px] text-start">
-            <span><i class="fa-solid fa-info text-[30px] font-bold text-[orangered]"></i><h2 class="text-[35px] text-[#1E3A5F] font-bold">Overview</h2></span>
+            <span><i class="fa-solid fa-info text-[20px] font-bold text-[orangered]"></i><h2 class="text-[35px] text-[#1E3A5F] font-bold">Overview</h2></span>
             <p class="text-[gray] text-[17px] w-[96%]">
                 Australia is one of the most popular destinations for international students, known for its high-quality education system, diverse culture, and excellent quality of life. With world-renowned universities and a welcoming environment, 
                 Australia offers Nepali students an exceptional opportunity to gain globally recognized qualifications. <br> <br>
@@ -56,16 +56,16 @@
     <div class="pt-[30px] pl-[120px]">
         <div class="shadow-lg rounded-xl overflow-hidden w-[56%] ">
             <div class="p-[20px] text-start">
-                <span><i class="fa-solid fa-info text-[30px] flex flex-col font-bold text-[orangered]"></i><h2 class="text-[35px] text-[#1E3A5F] font-bold">Top Courses</h2></span>
-                <div class="text-[gray] text-md flex flex-col gap-[9px] ">
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Business and Management</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Information Technology and Computer Science</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Engineering (Civil, Mechanical, Electrical)</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Health Sciences and Nursing</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Accounting and Finance</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Hospitality and Tourism Management</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Education and Teaching</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Environmental Science</div></span>
+                <span><i class="fa-solid fa-info text-[20px] flex flex-col font-bold text-[orangered]"></i><h2 class="text-[35px] text-[#1E3A5F] font-bold">Top Courses</h2></span>
+                <div class="text-[gray] text-md flex flex-col gap-[12px] pt-3">
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Business and Management</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Information Technology and Computer Science</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Engineering (Civil, Mechanical, Electrical)</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Health Sciences and Nursing</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Accounting and Finance</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Hospitality and Tourism Management</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Environmental Science</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Education and Teaching</div></li>
                 </div>
                 </div>
             </div>
@@ -75,16 +75,16 @@
     <div class="pt-[30px] pl-[120px]">
     <div class="shadow-lg rounded-xl overflow-hidden w-[56%] ">
         <div class="p-[20px] text-start">
-            <span><i class="fa-solid fa-info text-[30px] font-bold text-[orangered]"></i><h2 class="text-[35px] text-[#1E3A5F] font-bold">Admission Requirements</h2></span>
-            <div class="text-[gray] text-md flex flex-col gap-[9px] ">
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div> Completed Year 12 or equivalent qualification</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>English proficiency: IELTS 6.0-7.0 (varies by course)</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Academic transcripts and certificates</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Statement of Purpose (SOP)</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Letters of Recommendation</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Hospitality and Tourism Management</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Valid passport</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Financial proof (tuition + living expenses)</div></span>
+            <span><i class="fa-solid fa-info text-[20px] font-bold text-[orangered]"></i><h2 class="text-[35px] text-[#1E3A5F] font-bold">Admission Requirements</h2></span>
+            <div class="text-[gray] text-md flex flex-col gap-[12px] pt-3">
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div> Completed Year 12 or equivalent qualification</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>English proficiency: IELTS 6.0-7.0 (varies by course)</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Academic transcripts and certificates</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Statement of Purpose (SOP)</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Letters of Recommendation</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Hospitality and Tourism Management</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Valid passport</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Financial proof (tuition + living expenses)</div></li>
                 </div>
         </div>
     </div>
@@ -93,12 +93,12 @@
     <div class="pt-[30px] pl-[120px]">
     <div class="shadow-lg rounded-xl overflow-hidden w-[56%] ">
         <div class="p-[20px] text-start">
-            <span><i class="fa-solid fa-info text-[30px] font-bold text-[orangered]"></i><h2 class="text-[35px] text-[#1E3A5F] font-bold">Estimated Tuition Fees</h2></span>
-            <div class="text-[gray] text-md flex flex-col gap-[9px] ">
-                    <span class="flex flex-col"><i class="fa-solid fa-circle text-[7px]"></i><div class="font-semibold">Undergraduate:</div> <div>AUD 20,000 - 45,000 per year</div></span>
-                    <span class="flex flex-col"><i class="fa-solid fa-circle text-[7px]"></i><div class="font-semibold">Postgraduate:</div> <div>AUD 22,000 - 50,000 per year</div></span>
-                    <span class="flex flex-col"><i class="fa-solid fa-circle text-[7px]"></i><div class="font-semibold">Vocational Education:</div> <div>AUD 4,000 - 22,000 per year</div></span>
-                    <span class="flex flex-col"><i class="fa-solid fa-circle text-[7px]"></i><div class="font-semibold">Living Expenses:</div> <div>AUD 21,041 per year (minimum)</div></span>
+            <span><i class="fa-solid fa-info text-[20px] font-bold text-[orangered]"></i><h2 class="text-[35px] text-[#1E3A5F] font-bold">Estimated Tuition Fees</h2></span>
+            <div class="text-[gray] text-md flex flex-col gap-[12px] pt-3">
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div class="font-semibold">Undergraduate:</div> <div>AUD 20,000 - 45,000 per year</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div class="font-semibold">Postgraduate:</div> <div>AUD 22,000 - 50,000 per year</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div class="font-semibold">Vocational Education:</div> <div>AUD 4,000 - 22,000 per year</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div class="font-semibold">Living Expenses:</div> <div>AUD 21,041 per year (minimum)</div></li>
                 </div>
         </div>
     </div>
@@ -107,13 +107,13 @@
     <div class="pt-[30px] pl-[120px]">
     <div class="shadow-lg rounded-xl overflow-hidden w-[56%] ">
         <div class="p-[20px] text-start">
-            <span><i class="fa-solid fa-info text-[30px] font-bold text-[orangered]"></i><h2 class="text-[35px] text-[#1E3A5F] font-bold">Scholarship Opportunities</h2></span>
-             <div class="text-[gray] text-md flex flex-col gap-[9px] ">
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Australia Awards Scholarships (fully funded)</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Destination Australia Scholarship</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>University-specific scholarships</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Research Training Program (RTP)</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Endeavour Leadership Program</div></span>
+            <span><i class="fa-solid fa-info text-[20px] font-bold text-[orangered]"></i><h2 class="text-[35px] text-[#1E3A5F] font-bold">Scholarship Opportunities</h2></span>
+             <div class="text-[gray] text-md flex flex-col gap-[12px] pt-3">
+                <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Australia Awards Scholarships (fully funded)</div></li>
+                <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Destination Australia Scholarship</div></li>
+                <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>University-specific scholarships</div></li>
+                <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Research Training Program (RTP)</div></li>
+                <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Endeavour Leadership Program</div></li>
                 </div>
         </div>
     </div>
@@ -122,14 +122,14 @@
     <div class="pt-[30px] pl-[120px]">
     <div class="shadow-lg rounded-xl overflow-hidden w-[56%] ">
         <div class="p-[20px] text-start">
-            <span><i class="fa-solid fa-info text-[30px] font-bold text-[orangered]"></i><h2 class="text-[35px] text-[#1E3A5F] font-bold">Why Choose Australia?</h2></span>
-             <div class="text-[gray] text-md flex flex-col gap-[9px] ">
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>World-class universities with global recognition</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Post-study work visa up to 4 years</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Work 48 hours per fortnight while studying</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Multicultural society welcoming to international students</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>High quality of life and safety</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Pathway to permanent residency</div></span>
+            <span><i class="fa-solid fa-info text-[20px] font-bold text-[orangered]"></i><h2 class="text-[35px] text-[#1E3A5F] font-bold">Why Choose Australia?</h2></span>
+             <div class="text-[gray] text-md flex flex-col gap-[12px] pt-3">
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>World-class universities with global recognition</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Post-study work visa up to 4 years</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Work 48 hours per fortnight while studying</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Multicultural society welcoming to international students</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>High quality of life and safety</div></li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Pathway to permanent residency</div></li>
                 </div>
         </div>
     </div>
@@ -139,17 +139,17 @@
     <div class="pt-[30px] pl-[120px]">
     <div class="shadow-lg rounded-xl overflow-hidden w-[56%] ">
         <div class="p-[20px] text-start">
-            <span><i class="fa-solid fa-info text-[30px] font-bold text-[orangered]"></i><h2 class="text-[35px] text-[#1E3A5F] font-bold">Our Guidance</h2></span>
+            <span><i class="fa-solid fa-info text-[20px] font-bold text-[orangered]"></i><h2 class="text-[35px] text-[#1E3A5F] font-bold">Our Guidance</h2></span>
              <p class="text-[gray] text-[17px] w-[96%]">
                 At ALVN Education Consultancy, we provide end-to-end support for your Australian education journey:
             </p>
-             <div class="text-[gray] text-md flex flex-col gap-[9px] ">
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Course and university selection based on your profile</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Application assistance and document preparation</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>IELTS/PTE preparation guidance</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Visa application support with high success rate</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Pre-departure briefing and accommodation assistance</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Post-arrival support in Australia</div></span>
+             <div class="text-[gray] text-md flex flex-col gap-[12px] pt-3">
+                <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Course and university selection based on your profile</div></li>
+                <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Application assistance and document preparation</div></li>
+                <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>IELTS/PTE preparation guidance</div></li>
+                <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Visa application support with high success rate</div></li>
+                <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Pre-departure briefing and accommodation assistance</div></li>
+                <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i><div>Post-arrival support in Australia</div></li>
                 </div>
             <div class="text-start h-[60px] pt-[20px]">
                 <a href=""
@@ -161,16 +161,8 @@
     </div>
     </div>
 
-    <div class="sticky top-[30px] right-[120px] pt-[30px] ">
-    <div class="shadow-lg rounded-xl overflow-hidden ">
-        <a href=""
-                class="bg-[#C0392B] rounded-3xl text-white  px-4 py-2 text-center text-[18px]  hover:shadow-lg hover:translate-y-[2px] duration-[100] font-semibold">
-                Apply Now</a>
-    </div>
-    </div>
-
+    <footer>
     <div class="h-[350px] w-full bg-[#1E2952]">
-
         <div class="grid grid-cols-4 gap-[60px] w-[85%] mx-auto pt-[60px]">
             <div>
                 <h2 class="text-white text-[25px] text-start pb-2 font-semibold">About ALVN</h2>
@@ -231,7 +223,7 @@
             </p>
         </div>
     </div>
-
+</footer>
         <a href="" class="fixed bottom-[95px] right-[40px] text-[25px] bg-[#0E3386] text-white hover:bg-[#C0392B] duration-250 h-[50px] w-[50px] flex justify-center items-center rounded-full">
             <i class="fa-solid fa-angle-up"></i>
         </a>
