added blog page

--- a/UK.html
+++ b/UK.html
@@ -265,11 +265,11 @@
         </div>
 </footer>
 
-        <a href="" class="fixed bottom-[95px] right-[40px] text-[25px] bg-[#0E3386] text-white rounded-full hover:bg-[#C0392B] duration-250">
+        <a href="" class="fixed bottom-[95px] right-[40px] text-[25px] bg-[#0E3386] text-white hover:bg-[#C0392B] duration-250 h-[50px] w-[50px] flex justify-center items-center rounded-full">
             <i class="fa-solid fa-angle-up"></i>
         </a>
 
-        <a href="https://www.whatsapp.com/" target="_blank" class="fixed bottom-[35px] right-[38px] text-[35px] bg-[#55DD33] text-white rounded-full">
+        <a href="https://www.whatsapp.com/" target="_blank" class="fixed bottom-[35px] right-[38px] text-[35px] bg-[#55DD33] text-white h-[50px] w-[50px] flex justify-center items-center rounded-full">
             <i class="fa-brands fa-whatsapp"></i>
         </a>
 </body>
